# reinforcement-learning

./: .gitignore  README.md  pyproject.toml
coursework/1/report/: main.tex
coursework/1/report/code/: Q1.py  Q2.py
coursework/1/src/: Q1.ipynb  Q2.ipynb
coursework/2/report/: main.tex
coursework/2/src/part1/: agent.py  environment.py  visualiser.py
coursework/2/src/part2/: agent.py  train_and_test.py
