[tool.poetry]
name = "reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["jace-ys <jaceys.tan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.8"
numpy = "1.19.4"
matplotlib = "^3.3.2"
tqdm = "^4.51.0"
ipywidgets = "^7.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
